--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
 
         <footer class="pt-3 mt-4 text-muted border-top">
-          &copy; 2021
+          Fabiano F. Mattoso
         </footer>
       </div>
     </main>
